--- a/app/src/main/res/layout/country_view_item.xml
+++ b/app/src/main/res/layout/country_view_item.xml
@@ -4,67 +4,85 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="country"
             type="com.demo.country.domain.Country" />
     </data>
 
-    <!-- app:cardCornerRadius="8dp" -->
-    <androidx.cardview.widget.CardView
-        android:id="@+id/carView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/colorPrimaryLight"
-        app:cardElevation="3dp">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+
+<!--     app:cardCornerRadius="8dp"  -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/carView"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginTop="10dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="6dp"
+            app:cardBackgroundColor="@color/colorScreenBackground"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <!--            android:background="@color/purple_200"-->
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="6dp"
-                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textName"
-                    style="@style/style_country_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{country.name + `, ` + country.region}"
-                    tools:layout_editor_absoluteX="8dp"
-                    tools:text="United States of American, NA" />
+                android:orientation="vertical">
 
-                <Space
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    />
-                <TextView
-                    android:id="@+id/textCode"
-                    style="@style/style_country_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@{country.code}"
-                    tools:layout_editor_absoluteX="373dp"
-                    tools:text="US" />
-            </LinearLayout>
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="6dp"
+                    android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/textCaptial"
-                style="@style/style_capital_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="16dp"
-                android:text="@{country.capital}"
-                tools:layout_editor_absoluteX="8dp"
-                tools:layout_editor_absoluteY="24dp"
-                tools:text="Washington, D.C" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:id="@+id/textName"
+                        style="@style/style_country_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{country.name + `, ` + country.region}"
+                        tools:layout_editor_absoluteX="8dp"
+                        tools:text="United States of American, NA" />
+
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <TextView
+                        android:id="@+id/textCode"
+                        style="@style/style_country_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{country.code}"
+                        tools:layout_editor_absoluteX="373dp"
+                        tools:text="US" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/textCaptial"
+                    style="@style/style_capital_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="@{country.capital}"
+                    tools:layout_editor_absoluteX="8dp"
+                    tools:layout_editor_absoluteY="24dp"
+                    tools:text="Washington, D.C" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
