--- a/app/src/main/res/layout/fragment_country_list.xml
+++ b/app/src/main/res/layout/fragment_country_list.xml
@@ -27,9 +27,9 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/countries_list"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
