--- a/app/src/main/res/layout/fragment_country_list.xml
+++ b/app/src/main/res/layout/fragment_country_list.xml
@@ -16,7 +16,7 @@
         tools:context=".ui.list.CountryListFragment">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageError"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
